# Agent-S

./: .gitignore  .gitmodules  .pre-commit-config.yaml  ACCESSIBILITY_README.md  ANALYSIS.md  ISSUE_COMMENT.md  LICENSE  Meriiam_18  OSWorld.md  README.md  README_CONTRIBUTION.md  WAA_setup.md  WindowsACI.ipynb  WindowsAgentArena.md  accessibility_demo.py  agent_memory.json  grounding_improved.py  models.md  pyproject.toml  requirements-dev.txt  requirements.txt  self_check.py  server.py  setup.py  tmp.ipynb
.github/workflows/: ci.yml  lint.yml  send_test_request.yml
.patches/: 0002-ci-use-pre-commit-mirrors-for-flake8-and-add-basic-h.patch
agent_s/: .gitignore  DAGPlanner.py  GraphSearchAgent.py  MultimodalAgent.py  MultimodalAsyncAgent.py  MultimodalAsyncEngine.py  MultimodalEngine.py  ProceduralMemory.py  TaskEvaluator.py  TaskExecutor.py  UIAgent.py  cli_app.py  osworld_utils.py  query_perplexica.py
agent_s/aci/: ACI.py  MacOSACI.py  OCRHelper.py  OSWorldACI.py  UIElementBase.py  UIElementLinux.py  UIElementMacOS.py  UIElementOSWorld.py  WindowsACI.py  testWIndows.py  windowsOSACI.py
agent_s/core/: AgentS.py  BaseModule.py  Knowledge.py  Manager.py  ProceduralMemory.py  Worker.py
agent_s/kb/: formulate_query.json  graph_agent_dags.json  graph_agent_plans.json  perplexica_rag_knowledge.json
agent_s/mllm/: MultimodalAgent.py  MultimodalAsyncAgent.py  MultimodalAsyncEngine.py  MultimodalEngine.py
agent_s/osworld/: GroundingAgent.py
agent_s/utils/: common_utils.py  ocr_server.py  query_perplexica.py
demo_reports/: executive_summary_accessibility_session_1759034479_20250928_044123.md  executive_summary_accessibility_session_1759034509_20250928_044152.md
demo_reports/csv/: accessibility_violations_accessibility_session_1759034479_20250928_044123.csv  accessibility_violations_accessibility_session_1759034509_20250928_044152.csv
demo_reports/html/: accessibility_report_accessibility_session_1759034479_20250928_044123.html  accessibility_report_accessibility_session_1759034509_20250928_044152.html
evaluation_sets/: test_small_new.json
examples/: cli_app.py  process_and_visualize.ipynb
examples/lmm_debate/: actor_critic.py  debate.py  hallusion_bench_experiment.py  (+3 more)
gui_agents/: cli_app.py  utils.py
osworld_setup/: OSWorld.md  lib_run_single.py  run.py
scripts/: _test_run_agent.py  run_agent_calc_and_compute_real.py  run_agent_create_website_real.py  run_agent_open_calculator_real.py  run_agent_open_calculator_safe.py  run_agent_open_sinoptik_real.py  run_agent_safe.py  run_debug_branch.py  run_generate_dressa_inspired.py
server/: run_server.py  server.py
tests/: __init__.py  conftest.py  test_aci.py  test_app_switching.py  test_cli_confirm_exec.py  test_code_agent.py  test_final_exec.py  test_final_statuses.py  test_infrastructure.py  test_litellm_engine.py  test_memory.py  test_minimax_engine.py  test_products_json.py  test_providers.py  test_smoke.py  test_uielement_base.py  test_uielement_linux.py  test_uielement_macos.py  test_uielement_osworld.py  test_utils_formatters.py  test_website_structure.py  test_windows_aci.py  test_worker.py
(+189 files in other folders)
